@@ -69,6 +69,9 @@ Porting:
 
 	Fixed ancillary messages on Solaris.
 
+	Filan: Solaris has the open file path infos in /proc/<pid>/path/
+	Thanks to Andy Fiddaman to directing me to the patch.
+
 Features:
 	Filan prints target of symlink when appropriate
 	Test: FILANSYMLINK
